--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 * {
   box-sizing: border-box;
+  margin-top: 0;
 }
 
 body {
@@ -65,4 +66,6 @@ h1, h2 {
 #nav-bar {
   background: black;
   padding: 0.2em;
+  width: 100vw;
+
 }
