--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
 * {
   box-sizing: border-box;
   margin-top: 0;
+  margin: 0;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
 
 h1, h2 {
   font-family: 'Permanent Marker', Helvetica, sans-serif;
+
 }
 
 .header {
@@ -38,6 +40,8 @@ h1, h2 {
 .container {
   display: inline-block;
   cursor: pointer;
+
+
 }
 .bar1,
 .bar2,
@@ -65,7 +69,6 @@ h1, h2 {
 
 #nav-bar {
   background: black;
-  padding: 0.2em;
-  width: 100vw;
-
+  padding: 0.5em;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
 }
